tests/snapshots/r#mod__property__vcard-30.snap
---
source: tests/mod.rs
expression: prop
---
name: TEL
params: [("VALUE", ["uri"]), ("TYPE", ["home"])]
value: Some("tel:+33-01-23-45-67")
