tests/snapshots/r#mod__property__vcard-31.snap
---
source: tests/mod.rs
expression: prop
---
name: TITLE
params: ContentLineParams([])
value: Some("Research Scientist")
