tests/snapshots/r#mod__property__vcard-32.snap
---
source: tests/mod.rs
expression: prop
---
name: TZ
params: ContentLineParams([("VALUE", ["utc-offset"])])
value: Some("-0500")
