tests/snapshots/r#mod__property__vcard-33.snap
---
source: tests/mod.rs
expression: prop
---
name: XML
params: ContentLineParams([])
value: Some("<html xmlns=\"http://www.w3.org/1999/xhtml\"></html>")
