tests/snapshots/r#mod__property__vcard-34.snap
---
source: tests/mod.rs
expression: prop
---
name: END
params: ContentLineParams([])
value: Some("VCARD")
