tests/snapshots/r#mod__property__vcard-4.snap
---
source: tests/mod.rs
expression: prop
---
name: ANNIVERSARY
params: ContentLineParams([])
value: Some("19960415")
