tests/snapshots/r#mod__property__vcard-5.snap
---
source: tests/mod.rs
expression: prop
---
name: BDAY
params: ContentLineParams([])
value: Some("--0203")
