tests/snapshots/r#mod__property__vcard-6.snap
---
source: tests/mod.rs
expression: prop
---
name: CALADRURI
params: []
value: Some("http://example.com/calendar/jdoe")
