tests/snapshots/r#mod__property__vcard-7.snap
---
source: tests/mod.rs
expression: prop
---
name: CALURI
params: ContentLineParams([("MEDIATYPE", ["text/calendar"])])
value: Some("ftp://ftp.example.com/calA.ics")
