tests/snapshots/r#mod__property__vcard-8.snap
---
source: tests/mod.rs
expression: prop
---
name: CLIENTPIDMAP
params: []
value: Some("1;urn:uuid:3df403f4-5924-4bb7-b077-3c711d9eb34b")
