tests/snapshots/r#mod__property__vcard-9.snap
---
source: tests/mod.rs
expression: prop
---
name: EMAIL
params: [("TYPE", ["work"])]
value: Some("jqpublic@xyz.example.com")
