tests/snapshots/r#mod__property__vcard.snap
---
source: tests/mod.rs
expression: prop
---
name: BEGIN
params: ContentLineParams([])
value: Some("VCARD")
